syntax = "proto3";

package go.micro.srv.db;

service DB {
	rpc GetUserById(GetUserRequest) returns (GetUserResponse) {}
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message Message {
	string say = 1;
}

message DeleteUserRequest {
	int64 id = 1;
}

message DeleteUserResponse {
	string status = 1;
	int64 id = 2;
}

message GetUserRequest {
	int64 id = 1;
}

message GetUserResponse {
	message Address {
		int64 id = 1;
		string shortname = 2;
		string address = 3;	
	}
	message MobilePhone {
		int64 id =1;
		string phone_number =2;
		string shortname = 3;
	}
	int64 id = 1;
	string name = 2;
	string sex = 3;
	string email = 4;
	string portrait_url = 5;
	string create_time = 6;
	string update_time = 7;
	repeated Address address = 8;
	repeated MobilePhone mobile = 9;
}

message UpdateUserRequest {
	int64 id = 1;
	string name = 2;
	string sex = 3;
	string email = 4;
	string portrait_url = 5;
	string create_time = 6;
	string update_time = 7;
}

message CreateUserRequest {
	string name = 1;
	string sex = 2;
	string email = 3;
	string portrait_url = 4;
	string create_time = 5;
	string update_time = 6;
}

message CreateUserResponse {
	int64 id = 1;
}

message UpdateUserResponse {
	int64 id = 1;
	string name = 2;
	string sex = 3;
	string email = 4;
	string portrait_url = 5;
	string create_time = 6;
	string update_time = 7;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
